# basilisk-rs

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: pr-benchmarks.yml  pr-tests.yml
examples/: full_satellite_stack.rs  plot_full_satellite_stack.py  plot_sun_pointing.py  scenario_basic_orbit.rs  sun_pointing.rs
src/: lib.rs  spacecraft.rs
src/actuators/: mod.rs
src/actuators/drag/: mod.rs
src/actuators/facet_drag/: mod.rs
src/actuators/hinged_rigid_body/: mod.rs
src/actuators/mtb/: mod.rs
src/actuators/reaction_wheel/: mod.rs
src/actuators/thruster/: mod.rs
src/environment/: mod.rs  nrlmsise.rs
src/environment/atmosphere/: mod.rs
src/environment/eclipse/: mod.rs
src/environment/ephemeris/: mod.rs
src/environment/gravity/: mod.rs
src/environment/magnetic_field/: mod.rs
src/fsw/: css_wls_est.rs  mod.rs  mrp_feedback.rs  rw_motor_torque.rs  sun_safe_point.rs
src/messages/: array_motor_torque.rs  atmosphere.rs  attitude_guidance.rs  attitude_reference.rs  body_torque_command.rs  eclipse.rs  gps.rs  hinged_rigid_body.rs  imu.rs  magnetic_field.rs  mod.rs  mtb_command.rs  planet_state.rs  power_node_usage.rs  power_storage_fault.rs  power_storage_status.rs  reaction_wheel_command.rs  solar_flux.rs  spacecraft_diagnostics.rs  spacecraft_mass_props.rs  spacecraft_state.rs  star_tracker.rs  sun_ephemeris.rs  sun_line.rs  sun_sensor.rs  tam.rs  thruster_command.rs  translation_reference.rs
src/power/: mod.rs
src/sensors/: mod.rs
src/simulation/: mod.rs
src/spacecraft/: mod.rs  mrp.rs  tests.rs
src/telemetry/: mod.rs
(+9 files in other folders)
