[package]
name = "basilisk-rs"
version = "0.1.0"
edition = "2024"
description = "A Rust port of Basilisk"

[dependencies]
anise = { version = "0.9.6", default-features = false }
hifitime = "4.2.6"
igrf = "0.2.0"
indicatif = "0.17.11"
nalgebra = { version = "0.33.2", default-features = false, features = ["std", "serde-serialize"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
rand_distr = { version = "0.4.3", default-features = false, features = ["std"] }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = "0.3.47"
